--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@remix-run/dev": "^1.6.2",
     "@remix-run/eslint-config": "^1.6.2",
     "@remix-run/serve": "^1.6.2",
+    "@tailwindcss/forms": "^0.5.2",
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.17",
     "autoprefixer": "^10.4.7",
