--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,9 @@
     "semi": "error",
     "object-curly-spacing": ["error", "always"],
     "no-trailing-spaces": "error",
-    "react/jsx-indent": [2, "tab"],
-    "quotes": ["error", "double"]
+    "react/jsx-indent": [2, 2],
+    "quotes": ["error", "double"],
+    "indent": ["error", 2],
+    "no-multiple-empty-lines": ["error", { "max": 1, "maxEOF": 1 }]
   }
 }
