--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "build": "npm run build:css && remix build",
     "build:css": "tailwindcss -m -i ./styles/app.css -o app/styles/app.css",
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
-    "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css"
+    "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css",
+    "eslint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "ts": "tsc --project ./tsconfig.json"
   },
   "dependencies": {
     "@remix-run/node": "^1.6.2",
