--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@remix-run/vercel": "^1.6.2",
     "@vercel/node": "^1.15.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-latex-next": "^2.1.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.6.2",
