--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,8 @@
     "react/jsx-indent": [2, 2],
     "quotes": ["error", "double"],
     "indent": ["error", 2],
-    "no-multiple-empty-lines": ["error", { "max": 1, "maxEOF": 1 }]
+    "no-multiple-empty-lines": ["error", { "max": 1, "maxEOF": 1 }],
+    "max-len": ["error", { "code": 80, "ignoreStrings": true, "ignoreComments": true }],
+    "comma-dangle": ["error", "never"]
   }
 }
