--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@remix-run/react": "^1.6.2",
     "@remix-run/vercel": "^1.6.2",
     "@vercel/node": "^1.15.2",
+    "jspdf": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-latex-next": "^2.1.0"
