--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "jspdf": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-latex-next": "^2.1.0"
+    "react-images-uploading": "^3.1.7",
+    "react-latex-next": "^2.1.0",
+    "tesseract.js": "^3.0.3"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.6.2",
