--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,8 @@
 
     // Remix takes care of building everything in `remix build`.
     "noEmit": true
-  }
+  },
+  "files": [
+    "./node_modules/tesseract.js/src/index.d.ts"
+  ]
 }
